# cdk-poetry-asset-code

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: code-analysis.yml  deploy-package.yml  python-tests.yml
poetry_asset_code/: __init__.py
tests/: test_poetry_asset_code.py
tests/resources/: pyproject_template.toml
